recallable/tests/ui/derive_fail_recallable_field_not_path.stderr
error: Only path types are supported here
 --> tests/ui/derive_fail_recallable_field_not_path.rs:6:12
  |
6 |     value: (T, T),
  |            ^^^^^^
