recallable/tests/ui/derive_fail_recallable_field_not_path.rs
use recallable::Recallable;

#[derive(Recallable)]
struct InvalidNonPathRecallableField<T> {
    #[recallable]
    value: (T, T),
}

fn main() {}
